# MCP-Sql-Server

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_USAGE.md  CONTRIBUTING.md  GIT_COMMANDS.txt  LICENSE  PROJECT_SUMMARY.txt  PUBLISH_TO_GITHUB.md  README.md  RIEPILOGO_PROGETTO.md  SECURITY.md  claude_desktop_config.example.json  pyproject.toml  setup.bat  setup.sh  start-manager.bat  test_connection.py
.claude/: settings.local.json
.superpowers/brainstorm/1877-1774345909/: .server-info  ui-layout.html
docs/: manuale-dizionario-semantico.md
docs/superpowers/plans/: 2026-03-24-semantic-dictionary.md  2026-03-24-sql-mcp-manager.md
docs/superpowers/specs/: 2026-03-24-sql-mcp-manager-design.md
manager/: config_manager.py  connection_tester.py  server.py
manager/static/: index.html
src/mcp_sqlserver/: __init__.py  config.py  helpers.py  pool.py  prompts.py  resources.py  security.py  server.py
src/mcp_sqlserver/tools/: __init__.py  describe_table.py  dictionary.py  execute_query.py  indexes.py  list_tables.py  relationships.py  search_columns.py  statistics.py  views.py
tests/: test_api.py  test_config_manager.py  test_connection_tester.py  test_dictionary.py  test_security_validator.py
