[project]
name = "mcp-sqlserver"
version = "0.1.0"
description = "MCP server for SQL Server database inspection with security controls"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "pyodbc>=5.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
manager = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
mcp-sqlserver = "mcp_sqlserver.server:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["manager", "src", ".git", ".pytest_cache"]
